--- a/home/home.html
+++ b/home/home.html
@@ -14,7 +14,7 @@
             <div class="home-button"><button type="button" onclick="location.href='home.html'">Início</button></div>
             <div class="menu">
                 <a href="#">Sobre</a>
-                <a href="sobre2/sobre/sobre.html" target="_blank" rel="noopener noreferrer">Código Arduíno</a>
+                <a href="sobre/sobre.html" target="_blank" rel="noopener noreferrer">Código Arduíno</a>
                 
             </div>
         </div>
