--- a/home/home.html
+++ b/home/home.html
@@ -26,7 +26,7 @@
     <div class="center">
         <div class="texto-sobre">
             <h1>Uma <span style="color: darkcyan;">Lixeira Inteligente</span> é um dispositivo automatizado que usa sensores e tecnologia para gerenciar o descarte de resíduos de forma eficiente, higiênica e sustentável.</h1>
-            <button>Saiba as vantagens</button>
+            <a href="index.html"><button>Saiba as vantagens</button>
         </div>
     </div>
     <div class="lixo-tacar">
