--- a/home/home.html
+++ b/home/home.html
@@ -13,7 +13,7 @@
             <div class="logo"><img src="assets/lixoazul.png" alt=""></div>
             <div class="home-button"><button type="button" onclick="location.href='home.html'">Início</button></div>
             <div class="menu">
-                <a href="#">Sobre</a>
+                <a href="index.html">Vantagens</a>
                 <a href="sobre/sobre.html" target="_blank" rel="noopener noreferrer">Código Arduíno</a>
                 
             </div>
