--- a/home/index.html
+++ b/home/index.html
@@ -85,8 +85,8 @@ Manutenção e melhorias são simples.
                     <img src="./img/nsite4.png" alt="Vision Pro">
                 </div>
                 <div class="content">
-                    <p class="product-tag">Alta performance</p>
-                    <p class="product-name">Vision Pro</p>
+                    <p class="product-tag">Vantagens de ter uma Lixeira inteligente</p>
+                    <p class="product-name">Com sensores de movimento, a tampa abre automaticamente ao detectar a aproximação das mãos ou objetos, eliminando a necessidade de contato físico. Isso reduz significativamente a propagação de germes e bactérias, sendo especialmente útil em ambientes como cozinhas e banheiros. </p>
                     <p class="description">
                         Explicacao vision pro
                     </p>
