--- a/home/index.html
+++ b/home/index.html
@@ -82,7 +82,7 @@ Manutenção e melhorias são simples.
 
             <div class="item">
                 <div class="product-img">
-                    <img src="./img/nsite4.png" alt="Vision Pro">
+                    <img src="./img/3035083.png" alt="Vision Pro">
                 </div>
                 <div class="content">
                     <p class="product-tag">Vantagens de ter uma Lixeira inteligente</p>
