--- a/home/index.html
+++ b/home/index.html
@@ -18,9 +18,9 @@
         <div class="logo">Lixeira Inteligente</div>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Produtos</li>
-                <li>Contatos</li>
+                <li> <a href="Victor0v0.github.io/home/home.html">Home</a></li>
+                <li></li>
+                <li></li>
             </ul>
         </nav>
     </header>
