--- a/home/index.html
+++ b/home/index.html
@@ -18,7 +18,7 @@
         <div class="logo">Lixeira Inteligente</div>
         <nav>
             <ul>
-                <li> <a href="Victor0v0.github.io/home/home.html">Home</a></li>
+                <li> <a href="https://victor0v0.github.io/site-projeto/home/home.html">Home</a></li>
                 <li></li>
                 <li></li>
             </ul>
@@ -86,9 +86,9 @@ Manutenção e melhorias são simples.
                 </div>
                 <div class="content">
                     <p class="product-tag">Vantagens de ter uma Lixeira inteligente</p>
-                    <p class="product-name">Com sensores de movimento, a tampa abre automaticamente ao detectar a aproximação das mãos ou objetos, eliminando a necessidade de contato físico. Isso reduz significativamente a propagação de germes e bactérias, sendo especialmente útil em ambientes como cozinhas e banheiros. </p>
+                    <p class="product-name">Maior Higiene e Segurança</p>
                     <p class="description">
-                        Explicacao vision pro
+                        Com sensores de movimento, a tampa abre automaticamente ao detectar a aproximação das mãos ou objetos, eliminando a necessidade de contato físico. Isso reduz significativamente a propagação de germes e bactérias, sendo especialmente útil em ambientes como cozinhas e banheiros
                     </p>
                     <button class="btn">Saiba mais</button>
                 </div>
