--- a/home/index.html
+++ b/home/index.html
@@ -58,7 +58,7 @@ Ideal para locais com alto fluxo de pessoas, como banheiros públicos, hospitais
 
             <div class="item">
                 <div class="product-img">
-                    <img src="./img/Lixeira-2048x1633.png" alt="Air Pods Max">
+                    <img src="./img/8124902.png" alt="Air Pods Max">
                 </div>
                 <div class="content">
                     <p class="product-tag">Vantagens de ter uma Lixeira inteligente</p>
