--- a/home/index.html
+++ b/home/index.html
@@ -51,7 +51,7 @@ Evita o contato físico, tornando o uso mais higiênico e prático.
 
 Ideal para locais com alto fluxo de pessoas, como banheiros públicos, hospitais, escolas, etc.
                     </p>
-                    <button class="btn">Saiba mais</button>
+                    <button class="btn"></button>
                 </div>
 
             </div>
@@ -74,7 +74,7 @@ Fácil de reproduzir em escolas e oficinas.
 
 Manutenção e melhorias são simples.
                     </p>
-                    <button class="btn">Saiba mais</button>
+                    <button class="btn"></button>
                 </div>
 
 
@@ -90,7 +90,7 @@ Manutenção e melhorias são simples.
                     <p class="description">
                         Com sensores de movimento, a tampa abre automaticamente ao detectar a aproximação das mãos ou objetos, eliminando a necessidade de contato físico. Isso reduz significativamente a propagação de germes e bactérias, sendo especialmente útil em ambientes como cozinhas e banheiros
                     </p>
-                    <button class="btn">Saiba mais</button>
+                    <button class="btn"></button>
                 </div>
 
 
